updated on colab

--- a/nbs/1. Why are we here.ipynb
+++ b/nbs/1. Why are we here.ipynb
@@ -314,6 +314,46 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "d03Xl0azQf7L",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "1f3b02c2-e3fa-4dcd-cd18-3105b78d553c"
+      },
+      "source": [
+        "mat_food_quantity = np.array([[6,5,3,1],\n",
+        "                              [3,6,2,2],\n",
+        "                              [3,4,3,1]])\n",
+        "mat_shop_prices = np.array([[1.50,1.00],\n",
+        "                            [2.00,2.50],\n",
+        "                            [5.00,4.50],\n",
+        "                            [16.00,17.00]])\n",
+        "\n",
+        "mat_food_quantity @ mat_shop_prices"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[50. , 49. ],\n",
+              "       [58.5, 61. ],\n",
+              "       [43.5, 43.5]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "hidden": true,
         "id": "FAqTClgNNAOH",
         "colab_type": "code",
@@ -321,7 +361,8 @@
         "outputId": "6db4df2d-86b4-4ed2-8fcb-06a9fa7c5802"
       },
       "source": [
-        "#Exercise: Use Numpy to compute the answer to the above\n"
+        "#Exercise: Use Numpy to compute the answer to the above\n",
+        "# Below is the correct answer"
       ],
       "execution_count": 0,
       "outputs": [
@@ -410,6 +451,18 @@
         "<img src=\"https://github.com/impiyush/numerical-linear-algebra/blob/master/nbs/images/cnn3.png?raw=1\" alt=\"CNNs\" style=\"width: 80%\"/>\n",
         "\n",
         "Let's see how convolutions can be used for *edge detection* in [this notebook](convolution-intro.ipynb)(originally from the [fast.ai Deep Learning Course](http://course.fast.ai/)) "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s85HxQTyTvds",
+        "colab_type": "text"
+      },
+      "source": [
+        "Higher dimension matrices are known as **Tensors**. \n",
+        "\n",
+        "Example: In MNIST data, the training set has a shape of (70000, 28, 28) which is 3-dimensional matrix and can also be referred to as Tensor"
       ]
     },
     {
@@ -541,7 +594,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "collapsed": true,
         "id": "y-_OJpKJNAOb",
         "colab_type": "code",
         "colab": {}
@@ -569,10 +621,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "collapsed": true,
         "id": "tmAjZOdCNAOf",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        },
+        "outputId": "bda3571a-4b8a-4c60-d9c6-cc236f93c13a"
       },
       "source": [
         "x = 1/10\n",
@@ -580,8 +635,95 @@
         "    print(x)\n",
         "    x = f(x)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "0.1\n",
+            "0.2\n",
+            "0.4\n",
+            "0.8\n",
+            "0.6000000000000001\n",
+            "0.20000000000000018\n",
+            "0.40000000000000036\n",
+            "0.8000000000000007\n",
+            "0.6000000000000014\n",
+            "0.20000000000000284\n",
+            "0.4000000000000057\n",
+            "0.8000000000000114\n",
+            "0.6000000000000227\n",
+            "0.20000000000004547\n",
+            "0.40000000000009095\n",
+            "0.8000000000001819\n",
+            "0.6000000000003638\n",
+            "0.2000000000007276\n",
+            "0.4000000000014552\n",
+            "0.8000000000029104\n",
+            "0.6000000000058208\n",
+            "0.20000000001164153\n",
+            "0.40000000002328306\n",
+            "0.8000000000465661\n",
+            "0.6000000000931323\n",
+            "0.20000000018626451\n",
+            "0.40000000037252903\n",
+            "0.8000000007450581\n",
+            "0.6000000014901161\n",
+            "0.20000000298023224\n",
+            "0.4000000059604645\n",
+            "0.800000011920929\n",
+            "0.6000000238418579\n",
+            "0.20000004768371582\n",
+            "0.40000009536743164\n",
+            "0.8000001907348633\n",
+            "0.6000003814697266\n",
+            "0.20000076293945312\n",
+            "0.40000152587890625\n",
+            "0.8000030517578125\n",
+            "0.600006103515625\n",
+            "0.20001220703125\n",
+            "0.4000244140625\n",
+            "0.800048828125\n",
+            "0.60009765625\n",
+            "0.2001953125\n",
+            "0.400390625\n",
+            "0.80078125\n",
+            "0.6015625\n",
+            "0.203125\n",
+            "0.40625\n",
+            "0.8125\n",
+            "0.625\n",
+            "0.25\n",
+            "0.5\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n",
+            "1.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -805,8 +947,11 @@
         "hidden": true,
         "id": "bSgWJi98NAOy",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3ab03be8-695b-4d53-d8d7-0c06e3e44a01"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 90
+        },
+        "outputId": "15cf57b1-442f-4615-a751-1c8912c68fbf"
       },
       "source": [
         "import scipy.linalg as la \n",
@@ -818,15 +963,15 @@
         "\n",
         "print(B)"
       ],
-      "execution_count": 0,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[[    1.  1000.]\n",
-            " [    0.     1.]]\n",
-            "[[    1.     1000.   ]\n",
-            " [    0.001     1.   ]]\n"
+            "[[   1. 1000.]\n",
+            " [   0.    1.]]\n",
+            "[[1.e+00 1.e+03]\n",
+            " [1.e-03 1.e+00]]\n"
           ],
           "name": "stdout"
         }
@@ -835,7 +980,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "collapsed": true,
         "hidden": true,
         "id": "Vi45qN1GNAO2",
         "colab_type": "code",
@@ -850,11 +994,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "collapsed": true,
         "hidden": true,
         "id": "4yqMEgJ-NAO4",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4db8e22c-078f-4099-c9f1-54fbdb226c89"
       },
       "source": [
         "wA, vrA = la.eig(A)\n",
@@ -862,8 +1009,21 @@
         "\n",
         "wA, wB"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([1.+0.j, 1.+0.j]), array([2.+0.j, 0.+0.j]))"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
     },
     {
       "cell_type": "markdown",
